--- a/Settings/settings.json
+++ b/Settings/settings.json
@@ -1,1 +1,1 @@
-﻿{"Permission": "moderator", "Cooldown": 10, "ShowAlert": true, "Command": "!stare", "Info": ""}
+﻿{"Permission": "moderator", "Info": "", "bSuffix": "", "Cooldown": 10.0, "ShowDecorationAlert": false, "CommandAlts": "!so !shoutout", "ShowAlert": true, "Command": "!stare", "aPrefix": ""}
