partner tripwire and comments for config files
adds option for autoshoutouts for streamers with the partner badge on their first chat message.
adds the ability for comment lines escaped with # and empty lines in the conf-files
moved overlay page to main folder for easier api key handling

--- a/UI_Config.json
+++ b/UI_Config.json
@@ -56,7 +56,14 @@
         "label": "Show Prefex and Suffix on Screen?", 
         "tooltip": "Activate to show the prefix and suffix decoration in the on-screen alert", 
         "type": "checkbox", 
-        "value": false
+        "value": true
+    }, 
+    "Tripwire": {
+        "group": "Core", 
+        "label": "Autoshoutout Partnered Streamers?", 
+        "tooltip": "Activate to trigger an automatic shoutout on a partnered streamer's first message", 
+        "type": "checkbox", 
+        "value": true
     }, 
     "aPrefix": {
         "group": "Core", 
