add support for $lastplayed in shoutouts

--- a/stares.conf.example
+++ b/stares.conf.example
@@ -7,5 +7,6 @@
 # $targetname: username of shoutout target
 # $url: target's channel url in the form https://www.twitch.tv/$targetname
 # $shorturl: short channel url in the form twitch.tv/$targetname
+# $lastplayed: last game category the target streamed under
 
 default "Everyone check out the delightful $targetname at $url and drop a follow!"
